--- a/JPEG/packages.config
+++ b/JPEG/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FastBitmapLib" version="1.1.2" targetFramework="net452" />
+  <package id="morelinq" version="2.10.0" targetFramework="net452" />
   <package id="NUnit" version="3.0.1" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
